tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/gateway/https_with_x-forwarded-proto/to_b/_test_context/EnvoyFilter-VirtualService-Gateway.3758160373.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-20468
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingressgateway-redirect-config
  namespace: aks-istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          xff_num_trusted_hops: 1
          normalize_path: true
  workloadSelector:
    labels:
      istio: aks-istio-ingressgateway-external
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b.echo-2-20468.svc.cluster.local
  namespace: echo-2-20468
spec:
  gateways:
  - gateway
  hosts:
  - b.echo-2-20468.svc.cluster.local
  http:
  - route:
    - destination:
        host: b.echo-2-20468.svc.cluster.local
        port:
          number: 80
